--- a/quiz.html
+++ b/quiz.html
@@ -63,7 +63,7 @@
             </div>
             <div class="buttons">
                 <button class="quit">Quit Quiz</button>
-                <button class="continue">Restart</button>
+                <!-- <button class="continue">Restart</button> -->
             </div>
         </div>
 </body>
